# Herald-MCClientMCP

./: .gitignore  Cargo.toml  README.md  config.example.toml
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css
apps/web/src/assets/: Logo.tsx
apps/web/src/lib/: api.ts  store.ts
apps/web/src/panels/: ClientPanel.tsx  EnvironmentPanel.tsx  GamePanel.tsx  ModsPanel.tsx  StatusPanel.tsx
client-mod/1.20.1/: build.gradle.kts  gradle.properties  settings.gradle.kts
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/action/: ActionRegistration.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/dispatcher/: CommandDispatcher.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/events/: GameEventBridge.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/http/: SkillRouter.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/platform/: PlatformHelper.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/sensing/: SensingBuffer.java
client-mod/1.20.1/common/src/main/java/ai/herald/clientmod/util/: McVersionCompat.java
client-mod/1.20.1/common/src/test/java/ai/herald/clientmod/dispatcher/: ActionRegistryTest.java
client-mod/1.20.1/common/src/test/java/ai/herald/clientmod/http/: TokenStoreTest.java
client-mod/1.20.1/common/src/test/java/ai/herald/clientmod/protocol/: ResponseMessageTest.java
client-mod/1.20.1/forge/: build.gradle.kts
client-mod/1.20.1/forge/src/main/java/ai/herald/clientmod/forge/: HeraldClientForge.java
client-mod/1.20.4/: gradle.properties
client-mod/1.20.4/common/: build.gradle.kts
client-mod/1.20.4/common/src/main/java/ai/herald/clientmod/: HeraldClientMod.java
client-mod/1.20.4/common/src/main/java/ai/herald/clientmod/platform/: PlatformHelper.java
client-mod/1.20.4/common/src/main/java/ai/herald/clientmod/stream/: RemoteInputHandler.java
client-mod/1.20.4/common/src/main/java/ai/herald/clientmod/util/: McVersionCompat.java
client-mod/1.20.4/common/src/test/java/ai/herald/clientmod/catalog/: ActionCatalogTest.java
client-mod/1.21.1/: build.gradle.kts  gradle.properties  settings.gradle.kts
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/dispatcher/: MainThreadExecutor.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/http/: EventsHandler.java  TokenFilter.java  TokenStore.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/protocol/: HttpEndpoints.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/skill/: SkillStatus.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/stream/: FrameCapture.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/testing/: TaskManager.java
client-mod/1.21.1/common/src/main/java/ai/herald/clientmod/util/: InjectedInput.java  McVersionCompat.java
client-mod/1.21.1/common/src/test/java/ai/herald/clientmod/http/: ApiRouterIntegrationTest.java  PortPickerTest.java
client-mod/1.21.1/fabric/: build.gradle.kts
client-mod/1.21.1/neoforge/src/main/java/ai/herald/clientmod/neoforge/: HeraldClientNeoForge.java
client-mod/1.21.11/: build.gradle.kts  gradle.properties  settings.gradle.kts
client-mod/1.21.11/fabric/: build.gradle.kts
client-mod/1.21.11/neoforge/: build.gradle.kts
client-mod/1.21.11/neoforge/src/main/resources/: pack.mcmeta
client-mod/1.21.4/: gradle.properties
client-mod/1.21.4/common/src/main/java/ai/herald/clientmod/: HeraldClientMod.java
client-mod/1.21.4/common/src/main/resources/: herald-common.accesswidener
client-mod/1.21.4/neoforge/: build.gradle.kts
client-mod/1.21.4/neoforge/src/main/resources/: herald-client.mixins.json
client-mod/1.21.8/: build.gradle.kts  gradle.properties
client-mod/1.21.8/common/: build.gradle.kts
client-mod/1.21.8/neoforge/src/main/java/ai/herald/clientmod/: HeraldClientMod.java
client-mod/26.1/: gradle.properties
client-mod/26.1.2/: build.gradle.kts  gradle.properties  settings.gradle.kts
client-mod/26.1.2/fabric/src/main/resources/: fabric.mod.json  herald-client.mixins.json
client-mod/26.1.2/neoforge/src/main/resources/: herald-client.mixins.json
client-mod/26.1/fabric/: build.gradle.kts
client-mod/26.1/neoforge/src/main/java/ai/herald/clientmod/: HeraldClientMod.java  HeraldConstants.java
crates/bridge/: Cargo.toml
crates/bridge/src/: client.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs
crates/env/: Cargo.toml
crates/env/src/: download.rs  java.rs  lib.rs  loader.rs  minecraft.rs  task.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: args.rs  lib.rs  process.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  lib.rs  main.rs  routes.rs  state.rs  static_assets.rs  ws.rs
crates/server/src/mcp/: mod.rs  tools.rs
docs/: ACTIONS.md  DEPLOY.md
(+541 files in other folders)
