[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/env",
    "crates/launcher",
    "crates/bridge",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["17Artist"]
license = "GPL-3.0-only"
repository = "https://github.com/17Artist/Herald-MCClientMCP"

[workspace.dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serde stack
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# error handling
anyhow = "1"
thiserror = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# uuid + time
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }

# http stack
axum = { version = "0.7", features = ["macros", "ws"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }
http = "1"

# http client + download
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# embed static
rust-embed = { version = "8", features = ["mime-guess"] }
mime_guess = "2"

# crypto
sha1 = "0.10"
hex = "0.4"

# extra
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
which = "6"
flate2 = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
parking_lot = "0.12"
async-trait = "0.1"

# in-workspace
herald-mcclient-core = { path = "crates/core" }
herald-mcclient-env = { path = "crates/env" }
herald-mcclient-launcher = { path = "crates/launcher" }
herald-mcclient-bridge = { path = "crates/bridge" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "debuginfo"
