[package]
name = "herald-mcclient-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
herald-mcclient-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
