[package]
name = "herald-mcclient-env"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
herald-mcclient-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }
tokio-util = { workspace = true }
which = { workspace = true }
flate2 = { workspace = true }
zip = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }
