[package]
name = "herald-mcclient"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "herald-mcclient"
path = "src/main.rs"

[dependencies]
herald-mcclient-core = { workspace = true }
herald-mcclient-env = { workspace = true }
herald-mcclient-launcher = { workspace = true }
herald-mcclient-bridge = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
rust-embed = { workspace = true }
mime_guess = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
